--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,9 @@
 services:
-
+   redis:
+     image: redislabs/redismod
+     container_name: redis
+     ports:
+       - '6379:6379'
    flask:
         build: .
         command: python main.py
